--- a/testing.html
+++ b/testing.html
@@ -2,17 +2,40 @@
 <html>
   <head>
     <title>Cryptograms</title>
+    <link rel="stylesheet" href="styles.css" />
   <head>
   <body>
-    <p id="encrypted-quote">Waiting...</p>
-    <p id="encrypted-quote-blank"></p>
-    <p> Make a guess:<br>
-			<input type="text" id="guess-from"><br>
-			maps to 
-			<input type="text" id="guess-to">
-			<input type="submit" id="guess-button">
-	</p>
+    <div id="game-space">
+      <p id="encrypted-quote">Waiting...</p>
+      <p id="evaluated-quote"></p>
+
+      <p> Make a guess:<br>
+        <form action="" id="guess-form">
+    			<input type="text" id="guess-from" maxlength="1" size="1"><br>
+    			maps to 
+    			<input type="text" id="guess-to" maxLength="1" size="1">
+    			<input type="submit" id="guess-button">
+        </form>
+  	   </p>
+     </div>
+
+    <p id="player-info"></p>
+    <button id="play-again">Play again</button>
+    <input type="file" id="quoteFile"></input>
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+    <script type="text/javascript">
+      if (typeof jQuery == 'undefined') {
+          document.write(unescape("%3Cscript src='/js/jquery-2.0.3.min.js' type='text/javascript'%3E%3C/script%3E"));
+      }
+    </script>
+
+     <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
+    <script type="text/javascript">
+      if (typeof underscore == 'undefined') {
+          document.write(unescape("%3Cscript src='/js/underscore.js' type='text/javascript'%3E%3C/script%3E"));
+      }
+    </script>
    	<script type="text/javascript" language="javascript" src="crypto.js"></script>
   </body>
 </html>
