--- a/testing.html
+++ b/testing.html
@@ -6,12 +6,12 @@
   <head>
   <body>
     <div id="game-space">
-      <p id="encrypted-quote">Waiting...</p>
-      <p id="evaluated-quote"></p>
+      <p class="quotes" id="encrypted-quote">Waiting...</p>
+      <p class="quotes" id="evaluated-quote"></p>
 
       <p> Make a guess:<br>
         <form action="" id="guess-form">
-    			<input type="text" id="guess-from" maxlength="1" size="1"><br>
+    			<input type="text" id="guess-from" maxlength="1" size="1">
     			maps to 
     			<input type="text" id="guess-to" maxLength="1" size="1">
     			<input type="submit" id="guess-button">
